# ctl2mimir

./: .gitignore  Cargo.toml  Makefile  README.md  deploy.env  version.sh
config/: development.toml  testing.toml
docker/: Dockerfile  Dockerfile-dev  entrypoint.sh
migrations/: up.sql
migrations/1970-01-01-000000_movine_init/: up.sql
migrations/2020-09-28-214156_init/: down.sql  up.sql
src/: error.rs  init.rs  lib.rs  main.rs  server.rs  settings.rs  test.rs  utils.rs
src/api/: gql.rs  indexes.rs  mod.rs  model.rs
src/db/: mod.rs  model.rs  sqlite.rs
src/fsm/: bano.rs  cosmogony.rs  download.rs  fsm.rs  mod.rs  ntfs.rs  osm.rs
src/state/: mod.rs
