[package]
name = "delega"
version = "0.1.0"
authors = ["riendegris <matt@area403.org>"]
edition = "2018"

[dependencies]
async-trait = "0.1.35"
chrono = { version = "0.4", features = [ "serde" ] }
clap = "2.33.1"
dotenv = "0.15"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
slog = "2.5"
slog-term = "2.5"
slog-async = "2.5"
snafu = { version = "0.6", features = [ "futures" ] }
sqlx = { version = "0.3.5", default-features = false, features = [ "sqlite", "runtime-tokio", "macros", "chrono" ] }
tokio = { version = "0.2.13", features = [ "full" ] }
futures = { version = "0.3" }
juniper = { git="https://github.com/graphql-rust/juniper.git", features = ["chrono"] }
juniper_warp = { git="https://github.com/graphql-rust/juniper.git", features = ["subscriptions"] }
juniper_subscriptions = { git="https://github.com/graphql-rust/juniper.git" }
warp = { version = "0.2.2" }

[lib]
name = "delega"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"
