[package]
name = "ctl2mimir"
version = "0.1.0"
authors = ["riendegris <matt@area403.org>"]
edition = "2018"

[dependencies]
async-trait = "0.1.35"
async_zmq = "0.3.2"
chrono = { version = "0.4", features = [ "serde" ] }
clap = "2.33.1"
dotenv = "0.15"
futures = { version = "0.3" }
juniper = { git="https://github.com/graphql-rust/juniper.git", features = ["chrono"] }
# juniper_subscriptions = { git="https://github.com/graphql-rust/juniper.git" }
juniper_graphql_ws = { git="https://github.com/graphql-rust/juniper.git" }
juniper_warp = { git="https://github.com/graphql-rust/juniper.git", features = ["subscriptions"] }
reqwest = { version = "0.10.6", features = [ "blocking" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
slog = "2.5"
slog-term = "2.5"
slog-async = "2.5"
snafu = { version = "0.6", features = [ "futures" ] }
sqlx = { version = "0.3.5", default-features = false, features = [ "sqlite", "runtime-tokio", "macros", "chrono" ] }
tokio = { version = "0.2.13", features = [ "sync", "rt-core", "macros", "stream" ] }
url = "2.1"
warp = { version = "0.2.2" }

[lib]
name = "ctl2mimir"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"
